## Makefile.am -- Process this file with automake to produce Makefile.in

EXTRA_DIST = \
        init.php \
        page.tpl.php \
        normal.css \
        index.php \
        index.cnt.php \
        procces.php \
        procces.cnt.php \
        directory.php \
        directory.cnt.php \
        read.php \
        read.cnt.php \
        write.php \
        write.cnt.php \
        README COPYING
