EXTRA_DIST =  \
ho_gtk.h.3 ho_objmap.3 ho_segment.h.3 \
ho_bitmap.3 ho_layout.3 ho_objmap.h.3 ho_string.3 \
ho_bitmap.h.3 ho_layout.h.3 ho_pixbuf.3 ho_array.3 ho_string.h.3 \
ho_dimentions.h.3 ho_obj.3 ho_pixbuf.h.3 ho_array.h.3 hocr.h.3 \
ho_font.h.3 ho_objlist.3 ho_recognize.h.3 \
hocr.3 hocr_Hocr.3 hocrpp.h.3

man_MANS = \
ho_gtk.h.3 ho_objmap.3 ho_segment.h.3 \
ho_bitmap.3 ho_layout.3 ho_objmap.h.3 ho_array.3 ho_string.3 \
ho_bitmap.h.3 ho_layout.h.3 ho_pixbuf.3 ho_array.h.3 ho_string.h.3 \
ho_dimentions.h.3 ho_obj.3 ho_pixbuf.h.3 hocr.h.3 \
ho_font.h.3 ho_objlist.3 ho_recognize.h.3 \
hocr.3 hocr_Hocr.3 hocrpp.h.3
