EXTRA_DIST = hocr-gtk.desktop hocr1-48.png \
hocr-gtk.glade hocr-gtk.py \
gettext-bootstrap.sh  hocr-gtk.pot he.po sv.po he/hocr-gtk.mo sv/hocr-gtk.mo

bin_SCRIPTS = hocr-gtk.py

Applicationsdir = $(datadir)/applications
Applications_DATA = hocr-gtk.desktop

Pixmapssdir = $(datadir)/pixmaps
Pixmapss_DATA = hocr1-48.png

Gladedir = $(datadir)/hocr-gtk/glade
Glade_DATA = hocr-gtk.glade

Mohedir = $(datadir)/locale/he/LC_MESSAGES/
Mohe_DATA = he/hocr-gtk.mo

Mosvdir = $(datadir)/locale/sv/LC_MESSAGES/
Mosv_DATA = sv/hocr-gtk.mo
