EXTRA_DIST = hocr-gtk.desktop hocr1-48.png hocr1-128.png \
hocr-gtk.glade hocr-gtk.py \
gettext-bootstrap.sh  hocr-gtk.pot he.po sv.po he/hocr-gtk.mo sv/hocr-gtk.mo

bin_SCRIPTS = hocr-gtk.py hocr-sane.py

Applicationsdir = $(datadir)/applications
Applications_DATA = hocr-gtk.desktop hocr-sane.desktop

Pixmapssdir = $(datadir)/pixmaps
Pixmapss_DATA = hocr1-48.png hocr1-128.png

Gladedir = $(datadir)/hocr-gtk/glade
Glade_DATA = hocr-gtk.glade hocr-sane.glade

Mohedir = $(datadir)/locale/he/LC_MESSAGES/
Mohe_DATA = he/hocr-gtk.mo

Mosvdir = $(datadir)/locale/sv/LC_MESSAGES/
Mosv_DATA = sv/hocr-gtk.mo
