EXTRA_DIST = hocr-gtk.desktop hocr1-48.png hocr1-128.png \
hocr-gtk.glade hocr-gtk hocr-gtk.desktop \
sane-pygtk.glade sane-pygtk sane-pygtk.desktop \
gettext-bootstrap.sh hocr-gtk.pot sane-pygtk.pot \
he_hocr-gtk.po sv_hocr-gtk.po \
he_sane-pygtk.po sv_sane-pygtk.po \
he/hocr-gtk.mo sv/hocr-gtk.mo \
he/sane-pygtk.mo sv/sane-pygtk.mo

bin_SCRIPTS = hocr-gtk sane-pygtk

Applicationsdir = $(datadir)/applications
Applications_DATA = hocr-gtk.desktop sane-pygtk.desktop

Pixmapssdir = $(datadir)/pixmaps
Pixmapss_DATA = hocr1-48.png hocr1-128.png

Gladedir = $(datadir)/hocr-gtk/glade
Glade_DATA = hocr-gtk.glade

Gladesanedir = $(datadir)/sane-pygtk/glade
Gladesane_DATA = sane-pygtk.glade

Mohedir = $(datadir)/locale/he/LC_MESSAGES/
Mohe_DATA = he/hocr-gtk.mo he/sane-pygtk.mo

Mosvdir = $(datadir)/locale/sv/LC_MESSAGES/
Mosv_DATA = sv/hocr-gtk.mo sv/sane-pygtk.mo
